@@ -1,0 +1,5 @@
+form.group1.field1.required = -
+form.group1.field2.required = -
+
+myform.group1.field1.required = -
+myform.group1.field2.required = -
